Add startup skill and stabilize login flow