@@ -22,6 +22,7 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 /*
  * Author: liuYang
@@ -76,7 +77,7 @@ public class LoginService {
         List<NacosServerNode> list =
                 NacosService.getInstance().getNodeList(ServerTypeEnum.GATE).stream()
                         .sorted(Comparator.comparingInt(NacosServerNode::getLoadNum))
-                        .toList();
+                        .collect(Collectors.toList());
         if (list.isEmpty()) {
             return null;
         }
@@ -97,7 +98,7 @@ public class LoginService {
                                 node -> {
                                     return node.canUse();
                                 })
-                        .toList();
+                        .collect(Collectors.toList());
         List<ServerListResult.ServerNode> serverNodeList = new ArrayList<>();
         for (NacosServerNode node : list) {
             ServerListResult.ServerNode serverNode = new ServerListResult.ServerNode();
@@ -164,7 +165,11 @@ public class LoginService {
             entry.setToken(createToken(account));
             entry.setCreateTime(now);
             entry.setLastLoginTime(now);
-            entry.save();
+            boolean saveSuccess = LoginEntryHelper.save(entry);
+            if (!saveSuccess) {
+                logger.error("Failed to persist account to DB, account: {}", account);
+                return null;
+            }
             // 保存成功后写入Redis
             String key = RedisKeys.LOGIN_ACCOUNT_ID_KEY.getKey(account);
             RedisUtils.set(key, entry.getId());
@@ -190,6 +195,9 @@ public class LoginService {
         }
     }
 
+
+    public LoginService() {
+    }
     public void saveToken(String account, String token) {
         RedisUtils.setWithExpire(
                 RedisKeys.LOGIN_ACCOUNT_TOKEN_KEY.getKey(account), token, 1, TimeUnit.HOURS);
